[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Menu/Frames/choice 1.png" type="Texture" id=1]
[ext_resource path="res://GUI/Dialog_Player.gd" type="Script" id=3]
[ext_resource path="res://GUI/Simulated_Registry.gd" type="Script" id=4]
[ext_resource path="res://GUI/Option.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Pokemon_GB.ttf"

[sub_resource type="DynamicFont" id=1]
size = 38
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="Animation" id=2]
resource_name = "TextDisplay"
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Assets/Fonts/Pokemon_GB.ttf"

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fonts/Pokemon_GB.ttf"

[sub_resource type="DynamicFont" id=4]
size = 38
font_data = SubResource( 9 )

[sub_resource type="Animation" id=5]
resource_name = "PressSpaceBar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "PressSpaceBar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Dialog_Player" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Dialog_Box" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -16.0
margin_right = 240.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_NinePatchRect" type="NinePatchRect" parent="Dialog_Box"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = 59.0
margin_right = 1198.0
margin_bottom = 168.0
rect_min_size = Vector2( 720, 256 )
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Dialog_Box/Body_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.6395
margin_top = 48.0
margin_right = -17.3605
margin_bottom = -48.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/MarginContainer"]
margin_right = 1566.0
margin_bottom = 253.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "This is where the body of the dialog text goes.
Press F6 to play! ^_^"
autowrap = true

[node name="Body_AnimationPlayer" type="AnimationPlayer" parent="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label"]
anims/TextDisplay = SubResource( 2 )

[node name="Speaker_NinePatchRect" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
margin_top = -55.0
margin_right = 180.0
margin_bottom = -7.0
rect_min_size = Vector2( 180, 48 )
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speaker_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/Speaker_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 13.0
margin_right = -14.0
margin_bottom = -13.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speaker"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBar_NinePatchRect" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -37.667
margin_right = -5.28345
margin_bottom = 10.333
rect_min_size = Vector2( 256, 48 )
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBar_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/SpaceBar_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Spacebar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialog_Box/Body_NinePatchRect/SpaceBar_NinePatchRect"]
autoplay = "PressSpaceBar"
anims/PressSpaceBar = SubResource( 5 )

[node name="SelectChoice_NinePatchRect" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -268.0
margin_top = -37.667
margin_right = -12.0
margin_bottom = 10.333
rect_min_size = Vector2( 256, 48 )
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectChoice_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/SelectChoice_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_right = -90.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Select Choice"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialog_Box/Body_NinePatchRect/SelectChoice_NinePatchRect"]
autoplay = "PressSpaceBar"
anims/PressSpaceBar = SubResource( 6 )

[node name="Option_List" type="VBoxContainer" parent="Dialog_Box/Body_NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -540.0
margin_top = -60.0
margin_bottom = -12.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" parent="Dialog_Box/Body_NinePatchRect/Option_List" instance=ExtResource( 5 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 540.0
margin_bottom = 48.0

[node name="Option2" parent="Dialog_Box/Body_NinePatchRect/Option_List" instance=ExtResource( 5 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 540.0
margin_bottom = 100.0

[node name="Option3" parent="Dialog_Box/Body_NinePatchRect/Option_List" instance=ExtResource( 5 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 540.0
margin_bottom = 152.0

[node name="Character_Texture" type="TextureRect" parent="Dialog_Box/Body_NinePatchRect"]
margin_left = 200.0
margin_top = -175.0
margin_right = 360.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Simulated_Registry" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="animation_finished" from="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label/Body_AnimationPlayer" to="." method="_on_Body_AnimationPlayer_animation_finished"]
